# ffs

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.compozy/tasks/ffs-mvp/: _prd.md  _tasks.md  _techspec.md  task_01.md  task_02.md  task_03.md  task_04.md  task_05.md  task_06.md  task_07.md  task_08.md  task_09.md  task_10.md  task_11.md  task_12.md  task_13.md  task_14.md  task_15.md  task_16.md  task_17.md  task_18.md  task_19.md  task_20.md  task_21.md  task_22.md  task_23.md  task_24.md  task_25.md  task_26.md  task_27.md  task_28.md  task_29.md  task_30.md  task_31.md  task_32.md  task_33.md  task_34.md  task_35.md
.compozy/tasks/ffs-mvp/adrs/: adr-001.md  adr-002.md  adr-003.md  adr-004.md  adr-005.md  adr-006.md  adr-007.md  adr-008.md  adr-009.md  adr-010.md  adr-011.md  adr-012.md  adr-013.md  adr-014.md  adr-015.md  adr-016.md  adr-017.md  adr-018.md  adr-019.md  adr-020.md  adr-021.md  adr-022.md  adr-023.md  adr-024.md  adr-025.md
.github/workflows/: ci.yml  release.yml
crates/ffs-cli/: Cargo.toml
crates/ffs-cli/src/: client.rs  commands.rs  lib.rs  main.rs  url.rs
crates/ffs-cli/tests/: cli_integration.rs
crates/ffs-core/: Cargo.toml
crates/ffs-core/src/: atom.rs  error.rs  federation_peers.rs  lib.rs  multibase.rs  multihash.rs  quarantine.rs  quarantine_sqlite.rs  suppress.rs  working_set.rs
crates/ffs-core/src/capability/: decision.rs  mod.rs  scope.rs
crates/ffs-core/src/predicate/: mod.rs  registry.rs  reverse_map.rs
crates/ffs-core/src/projection/: mod.rs  path.rs  render.rs
crates/ffs-core/src/store/: keyring.rs  keyring_macos.rs  mem.rs  migrations.rs  mod.rs  schema.rs  sqlite.rs
crates/ffs-core/tests/: atom_roundtrip.rs  capability_evaluator.rs  jcs_vectors.rs  onboarding_docs.rs  predicate_loader.rs  projection_integration.rs  starter_predicates.rs  starter_templates.rs  store_integration.rs
crates/ffs-daemon/: Cargo.toml
crates/ffs-daemon/src/: api.rs  dispatch.rs  ingest_watcher.rs  lib.rs  main.rs  materializer.rs  notify.rs  scribe.rs
crates/ffs-daemon/src/transport/: mod.rs  unix.rs  windows.rs
crates/ffs-daemon/tests/: auditor_integration.rs  binary_end_to_end.rs  binary_end_to_end_windows.rs  dispatch_integration.rs  federation_integration.rs  federation_pull_integration.rs  ingest_pipeline_e2e.rs  installer_layout.rs  librarian_integration.rs  materializer_subscription.rs  perf.rs  scribe_integration.rs  sqlite_persistence.rs  summary_panel_integration.rs
crates/ffs-fastpath/: Cargo.toml
crates/ffs-fastpath/src/: classifier.rs  dispatch.rs  lib.rs  suppress.rs  watcher.rs
crates/ffs-fastpath/tests/: fastpath_integration.rs  starter_template_roundtrip.rs
crates/ffs-federation/: Cargo.toml
crates/ffs-federation/src/: cert.rs  client.rs  handshake.rs  lib.rs  mount.rs  scheduler.rs  server.rs
crates/ffs-mcp/: Cargo.toml  build.rs
crates/ffs-mcp/src/: daemon_client.rs  lib.rs  main.rs  protocol.rs  tools.rs  transport.rs
crates/ffs-mcp/tests/: mcp_integration.rs
crates/ffs-skills-host/: Cargo.toml
crates/ffs-skills-host/src/: lib.rs  protocol.rs  registry.rs  subprocess.rs
crates/ffs-skills-host/tests/: skills_integration.rs
docs/onboarding/: first-use-guide.md  technical-friend-checklist.md  troubleshooting.md
docs/onboarding/screenshots/: README.md
entitlements/: ffs.entitlements.plist
installer/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
installer/launchd/: com.ffs.daemon.plist
installer/systemd/: ffs-daemon.service
obsidian-plugin/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  vitest.config.mts
obsidian-plugin/src/: backoff.ts  client.ts  editing.ts  events.ts  folder.ts  main.ts  paths.ts  platform.ts  projection.ts  search.ts  settings.ts  summary.ts
obsidian-plugin/tests/: backoff.test.ts  client.test.ts  editing.test.ts  events.test.ts  folder.test.ts  obsidian-shim.ts  paths.test.ts  projection.test.ts  search.test.ts  settings.test.ts  summary.test.ts
scripts/: codesign-macos.sh
skills/_lib/: ffs_skill.py
skills/auditor/: SKILL.md  audit.py  definition.atom.json
skills/auditor/tests/: conftest.py  test_audit.py
skills/librarian/: SKILL.md  definition.atom.json  watcher.py
skills/librarian/tests/: conftest.py  test_watcher.py
skills/scribe/: SKILL.md  definition.atom.json  extraction.py
skills/scribe/prompts/: README.md
skills/scribe/tests/: conftest.py  test_extraction.py
starter/predicates/: README.md  contact.person.toml  note.toml  person.generic.toml
starter/templates/: README.md  contact-person.md.tera  note.md.tera  person-generic.md.tera
