[workspace]
resolver = "2"
members = [
    "crates/ffs-core",
    "crates/ffs-daemon",
    "crates/ffs-cli",
    "crates/ffs-mcp",
    "crates/ffs-federation",
    "crates/ffs-fastpath",
    "crates/ffs-skills-host",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BlueOak-1.0.0"
authors = ["Wes Foley", "FFS Contributors"]
repository = "https://github.com/Fornado-Greenhouse/ffs"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
ffs-core = { path = "crates/ffs-core" }
ffs-fastpath = { path = "crates/ffs-fastpath" }
ffs-federation = { path = "crates/ffs-federation" }
ffs-skills-host = { path = "crates/ffs-skills-host" }

# Serialization
serde = "1"
serde_json = "1"
serde_jcs = "0.1"

# Crypto and content addressing
ed25519-dalek = "2"
blake3 = "1"
multibase = "0.9"

# Config / schema / filesystem
toml = "0.8"
jsonschema = "0.27"
notify = "6"

# Storage and OS keychain
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
keyring = "3"
base64 = "0.22"

# Errors
thiserror = "2"

# Time
time = "0.3"

# Test utilities
proptest = "1"
rand = "0.8"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
