[workspace]
resolver = "2"
members = [
    "crates/ffs-core",
    "crates/ffs-daemon",
    "crates/ffs-cli",
    "crates/ffs-mcp",
    "crates/ffs-federation",
    "crates/ffs-fastpath",
    "crates/ffs-skills-host",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BlueOak-1.0.0"
authors = ["Wes Foley", "FFS Contributors"]
repository = "https://github.com/Fornado-Greenhouse/ffs"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
ffs-core = { path = "crates/ffs-core" }
ffs-fastpath = { path = "crates/ffs-fastpath" }
ffs-federation = { path = "crates/ffs-federation" }
ffs-skills-host = { path = "crates/ffs-skills-host" }

# Serialization
serde = "1"
serde_json = "1"
serde_jcs = "0.1"

# Crypto and content addressing
ed25519-dalek = "2"
blake3 = "1"
multibase = "0.9"

# Config / schema / filesystem
toml = "0.8"
jsonschema = "0.27"
notify = "6"

# Storage and OS keychain
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
# `apple-native` enables the real macOS Keychain Services backend
# (pulls in `security-framework`). Without it keyring v3 silently
# falls back to its in-process mock backend on macOS — see task_33
# + ADR-023. Linux gets `linux-native-sync-persistent` so SecretService
# is the backend. Windows gets `windows-native`.
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "linux-native-sync-persistent",
    "windows-native",
    "crypto-rust",
] }
base64 = "0.22"
# Drop-to-`security-framework` macOS keychain calls so `ffs-core` can
# set `kSecAttrAccessGroup` explicitly — keyring v3 doesn't expose
# that knob (see ADR-023). The version is pinned to the same major as
# what keyring v3.6 + `apple-native` already pulls in.
security-framework = "3"

# Templating
tera = "1"

# Async runtime and daemon plumbing
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dirs = "5"

# CLI
clap = { version = "4", features = ["derive", "env"] }
url = "2"
ffs-daemon = { path = "crates/ffs-daemon" }

# Federation transport
rcgen = "0.13"
rustls-pki-types = "1"

# Errors
thiserror = "2"

# Time
time = "0.3"

# Test utilities
proptest = "1"
rand = "0.8"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
