[package]
name = "ffs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ffs"
path = "src/main.rs"

[dependencies]
ffs-core = { workspace = true }

[lints]
workspace = true
