[package]
name = "ffs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ffs_cli"
path = "src/lib.rs"

[[bin]]
name = "ffs"
path = "src/main.rs"

[dependencies]
ffs-core = { workspace = true }
ffs-daemon = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
tokio-util = { workspace = true }
ffs-federation = { workspace = true }

[lints]
workspace = true
