[package]
name = "ffs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
blake3 = { workspace = true }
multibase = { workspace = true }
toml = { workspace = true }
jsonschema = { workspace = true }
notify = { workspace = true }
rusqlite = { workspace = true }
keyring = { workspace = true }
base64 = { workspace = true }

# macOS-only: drop down to `security-framework` for the keychain
# helpers so we can set `kSecAttrAccessGroup` (keyring v3 doesn't
# expose it). The Linux / Windows paths keep going through keyring.
# Per ADR-023.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }
rand = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing", "formatting", "macros"] }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
