[package]
name = "ffs-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ffs_daemon"
path = "src/lib.rs"

[[bin]]
name = "ffs-daemon"
path = "src/main.rs"

[dependencies]
ffs-core = { workspace = true }
# Note: ffs-daemon does NOT depend on ffs-fastpath, ffs-federation, or
# ffs-skills-host at the library level. Those crates depend on ffs-daemon
# (for the EventPublisher type) and are wired into the daemon binary by
# task_22's onboarding scripts. Adding back-deps here would create a
# cycle.

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing", "formatting"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
ffs-skills-host = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
