[package]
name = "ffs-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ffs_daemon"
path = "src/lib.rs"

[[bin]]
name = "ffs-daemon"
path = "src/main.rs"

[dependencies]
ffs-core = { workspace = true }
ffs-federation = { workspace = true }
# `ffs-skills-host` was a dev-dep through task_22; task_26 promotes
# it to a regular dep so the daemon binary can spawn the scribe
# subprocess. `ffs-skills-host` itself only depends on `ffs-core`,
# so no cycle is introduced. The earlier comment-block warning
# about `ffs-fastpath` still applies: that crate depends on
# `ffs-daemon` for `EventPublisher`, so adding it would cycle.
ffs-skills-host = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["parsing", "formatting"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
ffs-federation = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
