[package]
name = "ffs-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ffs-mcp"
path = "src/main.rs"

[dependencies]
ffs-core = { workspace = true }

[lints]
workspace = true
