[package]
name = "ffs-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ffs_mcp"
path = "src/lib.rs"

[[bin]]
name = "ffs-mcp"
path = "src/main.rs"

[dependencies]
ffs-core = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
ffs-daemon = { workspace = true }
ffs-federation = { workspace = true }

[lints]
workspace = true
